Attempt to fix sticky footer on iOS

--- a/styles/global.css
+++ b/styles/global.css
@@ -14,4 +14,11 @@
     @apply block;
     @apply rounded-lg;
   }
+  .stretch {
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+  }
+  html {
+    height: -webkit-fill-available;
+  }
 }
